--- a/OFC_Cliente/src/model/views/SignUpWindow.fxml
+++ b/OFC_Cliente/src/model/views/SignUpWindow.fxml
@@ -33,7 +33,7 @@
       <Label layoutX="194.0" layoutY="319.0" text="Full name" textFill="WHITE" />
       <Label layoutX="464.0" layoutY="168.0" text="Password" textFill="WHITE" />
       <Label layoutX="466.0" layoutY="319.0" text="E-mail" textFill="WHITE" />
-      <Button fx:id="signUpBtn" defaultButton="true" layoutX="339.0" layoutY="460.0" mnemonicParsing="false" onAction="#signUp" prefHeight="49.0" prefWidth="122.0" style="-fx-background-color: #FFE98F; -fx-background-radius: 50em; -fx-font-size: 1.7em;" text="SIGN UP">
+      <Button fx:id="signUpBtn" defaultButton="true" layoutX="339.0" layoutY="460.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="122.0" style="-fx-background-color: #FFE98F; -fx-background-radius: 50em; -fx-font-size: 1.7em;" text="SIGN UP">
          <font>
             <Font size="16.0" />
          </font>
@@ -69,7 +69,7 @@
          </image>
           </ImageView>
       <Button fx:id="spBtn" layoutX="628.0" layoutY="207.0" mnemonicParsing="false" style="-fx-background-color: none; -fx-text-fill: #fff;" />
-      <Button fx:id="backBtn" layoutX="129.0" layoutY="65.0" mnemonicParsing="false" rotate="180.0" style="-fx-background-color: none; -fx-text-fill: #fff;">
+      <Button fx:id="backBtn"  layoutX="129.0" layoutY="65.0" mnemonicParsing="false" rotate="180.0" style="-fx-background-color: none; -fx-text-fill: #fff;">
           <graphic>
               <ImageView>
                   <image>
