--- a/OFC_Cliente/src/model/views/SignUpWindow.fxml
+++ b/OFC_Cliente/src/model/views/SignUpWindow.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #000;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.SingUpWindowController">
+<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #000;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.SingUpWindowController">
    <children>
       <AnchorPane disable="true" layoutX="242.0" layoutY="214.0" opacity="0.59" prefHeight="200.0" prefWidth="200.0" style="-fx-filter-blur: 10px;">
          <children>
@@ -68,7 +68,15 @@
             <Image url="@../sources/questionIconYellow.png" />
          </image>
           </ImageView>
-      <Button fx:id="spBtn" layoutX="628.0" layoutY="207.0" mnemonicParsing="false" style="-fx-background-color: none; -fx-text-fill: #fff;" />
+      <Button fx:id="spBtn" layoutX="628.0" layoutY="207.0" mnemonicParsing="false" style="-fx-background-color: none; -fx-text-fill: #fff;">
+          <graphic>
+              <ImageView fitHeight="17.0" fitWidth="17.0">
+                  <image>
+                      <Image url="@../sources/eyeShowPasswdIcon.png" />
+                  </image>
+              </ImageView>
+          </graphic>
+          </Button>
       <Button fx:id="backBtn" layoutX="129.0" layoutY="65.0" mnemonicParsing="false" rotate="180.0" style="-fx-background-color: none; -fx-text-fill: #fff;">
           <graphic>
               <ImageView>
@@ -77,7 +85,7 @@
                   </image>
               </ImageView>
           </graphic>
-          
       </Button>
+      <TextField fx:id="pass_text" layoutX="465.0" layoutY="206.0"  style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: white;" visible="false" />
    </children>
 </Pane>
