--- a/OFC_Cliente/src/model/views/LogedWindow.fxml
+++ b/OFC_Cliente/src/model/views/LogedWindow.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -22,7 +21,7 @@
                         <Font size="18.0" />
                     </font>
                 </Label>
-                <Label fx:id="welcomeString" layoutX="261.0" layoutY="258.0" prefHeight="63.0" prefWidth="284.0" style="-fx-font-size: 2.5em;" text="WELCOME" textFill="WHITE" />
+                <Label fx:id="welcomeString" layoutX="267.0" layoutY="260.0" prefHeight="63.0" prefWidth="299.0" style="-fx-font-size: 2.5em;" text="WELCOME" textAlignment="JUSTIFY" textFill="WHITE" wrapText="true" />
                 <Label fx:id="logoutLabel" layoutX="566.0" layoutY="54.0" onMouseClicked="#logout" text="Logout" textFill="WHITE">
                     <font>
                         <Font size="18.0" />
