--- a/OFC_Cliente/src/model/views/LogedWindow.fxml
+++ b/OFC_Cliente/src/model/views/LogedWindow.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.LogedWindowController">
+<Pane fx:id="OFC_LOGED" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.LogedWindowController">
     <children>
-        <AnchorPane layoutX="-5.0" prefHeight="600.0" prefWidth="806.0" style="-fx-background-color: #0f0f0f;">
+        <AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #0f0f0f;">
             <children>
                 <ImageView fitHeight="85.0" fitWidth="212.0" layoutX="289.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
                     <image>
@@ -21,7 +21,7 @@
                         <Font size="18.0" />
                     </font>
                 </Label>
-                <Label fx:id="welcomeString" layoutX="267.0" layoutY="260.0" prefHeight="63.0" prefWidth="299.0" style="-fx-font-size: 2.5em;" text="WELCOME" textAlignment="JUSTIFY" textFill="WHITE" wrapText="true" />
+                <Label fx:id="welcomeString" layoutX="224.0" layoutY="261.0" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="397.0" style="-fx-font-size: 2.5em;" text="WELCOME" textAlignment="JUSTIFY" textFill="WHITE" wrapText="true" />
                 <Label fx:id="logoutLabel" layoutX="566.0" layoutY="54.0" onMouseClicked="#logout" text="Logout" textFill="WHITE">
                     <font>
                         <Font size="18.0" />
