--- a/OFC_Cliente/src/model/views/SignInWindow.fxml
+++ b/OFC_Cliente/src/model/views/SignInWindow.fxml
@@ -14,17 +14,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="OFC_SIGN_IN" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.SignInWindowController">
+<Pane fx:id="OFC_SIGN_IN" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.SignInWindowController">
    <children>
-      <AnchorPane layoutX="269.0" prefHeight="600.0" prefWidth="543.0" style="-fx-background-color: #0f0f0f;">
-         <children>
-            <ImageView fx:id="imageView" fitHeight="136.0" fitWidth="340.0" layoutX="102.0" layoutY="232.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../sources/OFCLogo.png" />
-               </image></ImageView>
-         </children>
-      </AnchorPane>
-      <AnchorPane prefHeight="600.0" prefWidth="272.0" style="-fx-background-color: #FFE98F;">
+      <AnchorPane prefHeight="630.0" prefWidth="280.0" style="-fx-background-color: #FFE98F;">
          <children>
             <Button id="singInBtn" fx:id="singInBtn" defaultButton="true" layoutX="74.0" layoutY="435.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="122.0" style="-fx-background-color: #000; -fx-font-size: 1.7em; -fx-text-fill: #FFE98F #FFE98F; -fx-background-radius: 50em;" text="SING IN">
                <font>
@@ -40,27 +32,35 @@
                      </input>
                   </Reflection>
                </effect></Button>
-            <Label layoutX="46.0" layoutY="155.0" text="Username">
+            <Label layoutX="36.0" layoutY="155.0" text="Username">
                <font>
                   <Font size="16.0" />
                </font></Label>
-            <TextField id="userNameTxTF" fx:id="userNameTxTF" layoutX="46.0" layoutY="183.0" promptText="max 15 characters" style="-fx-background-color: none; -fx-border-color: black; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: #000;" />
+            <TextField id="userNameTxTF" fx:id="userNameTxTF" layoutX="36.0" layoutY="183.0" promptText="max 15 characters" style="-fx-background-color: none; -fx-border-color: black; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: #000;" />
             <Label layoutX="46.0" layoutY="264.0" text="Password">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
             </Label>
-            <ImageView fx:id="passwrdTT" fitHeight="26.0" fitWidth="26.0" layoutX="209.0" layoutY="291.0">
+            <ImageView fx:id="passwrdTT" fitHeight="26.0" fitWidth="26.0" layoutX="230.0" layoutY="291.0">
                <image>
                   <Image url="@../sources/questionIconBlack.png" />
                </image></ImageView>
-            <ImageView fx:id="usernameTT" fitHeight="26.0" fitWidth="26.0" layoutX="209.0" layoutY="182.0">
+            <ImageView fx:id="usernameTT" fitHeight="26.0" fitWidth="26.0" layoutX="230.0" layoutY="182.0">
                <image>
                   <Image url="@../sources/questionIconBlack.png" />
                </image></ImageView>
-               <PasswordField id="passwdTxPF" fx:id="passwdTxPF" layoutX="46.0" layoutY="292.0" promptText="min 6 max 12 characters" style="-fx-background-color: none; -fx-border-color: #000; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: #000;" />
-             <Hyperlink fx:id="signUpLink" layoutX="45.0" layoutY="350.0" onAction="#signUpWindow" style="-fx-font-size: 1.3em; -fx-text-fill: #000;" text="Sing Up" />
-            <Label layoutX="90.0" layoutY="53.0" style="-fx-font-size: 3em;" text="Login" />
+               <PasswordField id="passwdTxPF" fx:id="passwdTxPF" layoutX="36.0" layoutY="292.0" promptText="min 6 max 12 characters" style="-fx-background-color: none; -fx-border-color: #000; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: #000;" />
+             <Hyperlink fx:id="signUpLink" layoutX="35.0" layoutY="350.0" onAction="#signUpWindow" style="-fx-font-size: 1.3em; -fx-text-fill: #000;" text="Sing Up" />
+            <Label layoutX="80.0" layoutY="53.0" style="-fx-font-size: 3em;" text="Login" />
+         </children>
+      </AnchorPane>
+       <AnchorPane layoutX="269.0" prefHeight="630.0" prefWidth="543.0" style="-fx-background-color: #0f0f0f;">
+         <children>
+            <ImageView fx:id="imageView" fitHeight="136.0" fitWidth="340.0" layoutX="102.0" layoutY="232.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../sources/OFCLogo.png" />
+               </image></ImageView>
          </children>
       </AnchorPane>
    </children>
