--- a/OFC_Cliente/src/model/views/SignInWindow.fxml
+++ b/OFC_Cliente/src/model/views/SignInWindow.fxml
@@ -14,11 +14,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="OFC_SIGN_IN" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.SignInWindowController">
+<Pane fx:id="OFC_SIGN_IN" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.SignInWindowController">
    <children>
       <AnchorPane prefHeight="630.0" prefWidth="280.0" style="-fx-background-color: #FFE98F;">
          <children>
-            <Button id="singInBtn" fx:id="singInBtn" defaultButton="true" layoutX="74.0" layoutY="435.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="122.0" style="-fx-background-color: #000; -fx-font-size: 1.7em; -fx-text-fill: #FFE98F #FFE98F; -fx-background-radius: 50em;" text="SING IN">
+            <Button id="singInBtn" fx:id="singInBtn" defaultButton="true" layoutX="74.0" layoutY="435.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="49.0" prefWidth="122.0" style="-fx-background-color: #000; -fx-font-size: 1.7em; -fx-text-fill: #FFE98F #FFE98F; -fx-background-radius: 50em;" text="SIGN IN">
                <font>
                   <Font size="16.0" />
                </font>
@@ -42,16 +42,16 @@
                   <Font name="Arial" size="16.0" />
                </font>
             </Label>
-            <ImageView fx:id="passwrdTT" fitHeight="26.0" fitWidth="26.0" layoutX="230.0" layoutY="291.0">
+            <ImageView fx:id="passwrdTT" fitHeight="26.0" fitWidth="26.0" layoutX="218.0" layoutY="292.0">
                <image>
                   <Image url="@../sources/questionIconBlack.png" />
                </image></ImageView>
-            <ImageView fx:id="usernameTT" fitHeight="26.0" fitWidth="26.0" layoutX="230.0" layoutY="182.0">
+            <ImageView fx:id="usernameTT" fitHeight="26.0" fitWidth="26.0" layoutX="218.0" layoutY="183.0">
                <image>
                   <Image url="@../sources/questionIconBlack.png" />
                </image></ImageView>
                <PasswordField id="passwdTxPF" fx:id="passwdTxPF" layoutX="36.0" layoutY="292.0" promptText="min 6 max 12 characters" style="-fx-background-color: none; -fx-border-color: #000; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: #000;" />
-             <Hyperlink fx:id="signUpLink" layoutX="35.0" layoutY="350.0" onAction="#signUpWindow" style="-fx-font-size: 1.3em; -fx-text-fill: #000;" text="Sing Up" />
+             <Hyperlink fx:id="signUpLink" layoutX="35.0" layoutY="350.0" onAction="#signUpWindow" style="-fx-font-size: 1.3em; -fx-text-fill: #000;" text="Sign Up" />
             <Label layoutX="80.0" layoutY="53.0" style="-fx-font-size: 3em;" text="Login" />
          </children>
       </AnchorPane>
