--- a/OFC_Cliente/src/model/views/SignUpWindow.fxml
+++ b/OFC_Cliente/src/model/views/SignUpWindow.fxml
@@ -25,15 +25,15 @@
             <Pane disable="true" layoutX="-21.0" layoutY="5.0" opacity="0.5" prefHeight="205.0" prefWidth="349.0" style="-fx-effect: gaussianBlurgaussianBlur(); -fx-background-color: #000;" />
          </children>
       </AnchorPane>
-      <TextField fx:id="userNameTxTF" layoutX="192.0" layoutY="206.0" promptText="max 15 characters" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: white;" />
-      <PasswordField fx:id="passwdTxPF" layoutX="465.0" layoutY="206.0" promptText="min 6 max 12 characters" style="-fx-background-color: none; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: white;" />
-      <TextField fx:id="fullNameTxTF" layoutX="192.0" layoutY="356.0" promptText="max 40 characters" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: #fff;" />
-      <TextField fx:id="eMailTxTF" layoutX="464.0" layoutY="356.0" promptText="example@example.com" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: white;" />
-      <Label layoutX="194.0" layoutY="168.0" text="Username" textFill="WHITE" />
-      <Label layoutX="194.0" layoutY="319.0" text="Full name" textFill="WHITE" />
-      <Label layoutX="464.0" layoutY="168.0" text="Password" textFill="WHITE" />
-      <Label layoutX="466.0" layoutY="319.0" text="E-mail" textFill="WHITE" />
-      <Button fx:id="signUpBtn" defaultButton="true" layoutX="339.0" layoutY="460.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="122.0" style="-fx-background-color: #FFE98F; -fx-background-radius: 50em; -fx-font-size: 1.7em;" text="SIGN UP">
+      <TextField fx:id="userNameTxTF" layoutX="192.0" layoutY="206.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="160.0" promptText="max 15 characters" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: white;" />
+      <PasswordField fx:id="passwdTxPF" layoutX="465.0" layoutY="206.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="160.0" promptText="min 6 max 12 characters" style="-fx-background-color: none; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: white;" />
+      <TextField fx:id="fullNameTxTF" layoutX="192.0" layoutY="356.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="160.0" promptText="max 40 characters" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: #fff;" />
+      <TextField fx:id="eMailTxTF" layoutX="464.0" layoutY="356.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="160.0" promptText="example@example.com" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: white;" />
+      <Label layoutX="194.0" layoutY="168.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="17.0" prefWidth="57.0" text="Username" textFill="WHITE" />
+      <Label layoutX="194.0" layoutY="319.0" prefHeight="17.0" prefWidth="53.0" text="Full name" textFill="WHITE" />
+      <Label layoutX="464.0" layoutY="168.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="17.0" prefWidth="54.0" text="Password" textFill="WHITE" />
+      <Label layoutX="466.0" layoutY="319.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="17.0" prefWidth="36.0" text="E-mail" textFill="WHITE" />
+      <Button fx:id="signUpBtn" defaultButton="true" layoutX="339.0" layoutY="460.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="49.0" prefWidth="122.0" style="-fx-background-color: #FFE98F; -fx-background-radius: 50em; -fx-font-size: 1.7em;" text="SIGN UP">
          <font>
             <Font size="16.0" />
          </font>
@@ -68,15 +68,7 @@
             <Image url="@../sources/questionIconYellow.png" />
          </image>
           </ImageView>
-      <Button fx:id="spBtn" layoutX="645.0" layoutY="207.0" mnemonicParsing="false" style="-fx-background-color: none; -fx-text-fill: #fff;">
-          <graphic>
-              <ImageView fitHeight="17.0" fitWidth="17.0">
-                  <image>
-                      <Image url="@../sources/eyeShowPasswdIcon.png" />
-                  </image>
-              </ImageView>
-          </graphic>
-          </Button>
+      <Button fx:id="spBtn" layoutX="645.0" layoutY="207.0" mnemonicParsing="false" style="-fx-background-color: none; -fx-text-fill: #fff;" />
       <Button fx:id="backBtn" cancelButton="true" layoutX="129.0" layoutY="65.0" mnemonicParsing="false" rotate="180.0" style="-fx-background-color: none; -fx-text-fill: #fff;">
           <graphic>
               <ImageView fitHeight="46.0" fitWidth="46.0">
@@ -87,5 +79,10 @@
           </graphic>
       </Button>
       <TextField fx:id="pass_text" layoutX="465.0" layoutY="206.0" promptText="min 6 max 12 characters" scaleZ="0.0" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: white;" visible="false" />
+        <ImageView fitHeight="22.0" fitWidth="22.0" layoutX="644.0" layoutY="217.0">
+            <image>
+                <Image url="@../sources/eyeShowPasswdIcon.png" />
+            </image>
+        </ImageView>
    </children>
 </Pane>
