--- a/OFC_Cliente/src/model/views/LogedWindow.fxml
+++ b/OFC_Cliente/src/model/views/LogedWindow.fxml
@@ -16,15 +16,15 @@
                         <Image url="@../sources/OFCLogo.png" />
                     </image>
                 </ImageView>
-                <Label fx:id="profileLabel" layoutX="169.0" layoutY="54.0" text="Profile" textFill="WHITE">
+                <Label fx:id="profileLabel" layoutX="169.0" layoutY="54.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" text="Profile" textFill="WHITE">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Label>
                 <Label fx:id="welcomeString" layoutX="224.0" layoutY="261.0" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="397.0" style="-fx-font-size: 2.5em;" text="WELCOME" textAlignment="JUSTIFY" textFill="WHITE" wrapText="true" />
-                <Label fx:id="logoutLabel" layoutX="566.0" layoutY="54.0" onMouseClicked="#logout" text="Logout" textFill="WHITE">
+                <Label fx:id="logoutLabel" layoutX="566.0" layoutY="54.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#logout" text="Logout" textFill="WHITE">
                     <font>
-                        <Font size="18.0" />
+                        <Font name="Arial" size="18.0" />
                     </font>
                 </Label>
                 <ImageView fx:id="profileImage" fitHeight="23.0" fitWidth="33.0" layoutX="127.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
