--- a/OFC_Cliente/src/model/views/SignInWindow.fxml
+++ b/OFC_Cliente/src/model/views/SignInWindow.fxml
@@ -16,11 +16,11 @@
 
 <Pane fx:id="OFC_SIGN_IN" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.SignInWindowController">
    <children>
-      <AnchorPane prefHeight="630.0" prefWidth="280.0" style="-fx-background-color: #FFE98F;">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="275.0" style="-fx-background-color: #FFE98F;">
          <children>
             <Button id="singInBtn" fx:id="singInBtn" defaultButton="true" layoutX="74.0" layoutY="435.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="49.0" prefWidth="122.0" style="-fx-background-color: #000; -fx-font-size: 1.7em; -fx-text-fill: #FFE98F #FFE98F; -fx-background-radius: 50em;" text="SIGN IN">
                <font>
-                  <Font size="16.0" />
+                  <Font name="Arial" size="16.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
@@ -32,12 +32,15 @@
                      </input>
                   </Reflection>
                </effect></Button>
-            <Label layoutX="36.0" layoutY="155.0" text="Username">
+            <Label layoutX="36.0" layoutY="155.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="69.5" text="Username">
                <font>
                   <Font size="16.0" />
                </font></Label>
-            <TextField id="userNameTxTF" fx:id="userNameTxTF" layoutX="36.0" layoutY="183.0" promptText="max 15 characters" style="-fx-background-color: none; -fx-border-color: black; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: #000;" />
-            <Label layoutX="46.0" layoutY="264.0" text="Password">
+            <TextField id="userNameTxTF" fx:id="userNameTxTF" layoutX="36.0" layoutY="183.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="164.5" promptText="max 15 characters" style="-fx-background-color: none; -fx-border-color: black; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: #000;">
+               <font>
+                  <Font name="Arial" size="13.0" />
+               </font></TextField>
+            <Label layoutX="46.0" layoutY="264.0" prefHeight="20.0" prefWidth="70.5" text="Password">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
@@ -50,12 +53,12 @@
                <image>
                   <Image url="@../sources/questionIconBlack.png" />
                </image></ImageView>
-               <PasswordField id="passwdTxPF" fx:id="passwdTxPF" layoutX="36.0" layoutY="292.0" promptText="min 6 max 12 characters" style="-fx-background-color: none; -fx-border-color: #000; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: #000;" />
-             <Hyperlink fx:id="signUpLink" layoutX="35.0" layoutY="350.0" onAction="#signUpWindow" style="-fx-font-size: 1.3em; -fx-text-fill: #000;" text="Sign Up" />
-            <Label layoutX="80.0" layoutY="53.0" style="-fx-font-size: 3em;" text="Login" />
+               <PasswordField id="passwdTxPF" fx:id="passwdTxPF" layoutX="36.0" layoutY="292.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="164.5" promptText="min 6 max 12 characters" style="-fx-background-color: none; -fx-border-color: #000; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: #000;" />
+             <Hyperlink fx:id="signUpLink" layoutX="35.0" layoutY="350.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#signUpWindow" prefHeight="30.0" prefWidth="66.5" style="-fx-font-size: 1.3em;" text="Sign Up" textFill="#127cee" />
+            <Label layoutX="80.0" layoutY="53.0" prefHeight="48.0" prefWidth="91.5" style="-fx-font-size: 3em;" text="Login" />
          </children>
       </AnchorPane>
-       <AnchorPane layoutX="269.0" prefHeight="630.0" prefWidth="543.0" style="-fx-background-color: #0f0f0f;">
+       <AnchorPane layoutX="269.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="543.0" style="-fx-background-color: #0f0f0f;">
          <children>
             <ImageView fx:id="imageView" fitHeight="136.0" fitWidth="340.0" layoutX="102.0" layoutY="232.0" pickOnBounds="true" preserveRatio="true">
                <image>
