--- a/OFC_Cliente/src/model/views/LogedWindow.fxml
+++ b/OFC_Cliente/src/model/views/LogedWindow.fxml
@@ -16,13 +16,16 @@
                         <Image url="@../sources/OFCLogo.png" />
                     </image>
                 </ImageView>
-                <Label fx:id="profileLabel" layoutX="169.0" layoutY="54.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" text="Profile" textFill="WHITE">
+                <Label fx:id="profileLabel" layoutX="169.0" layoutY="54.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="23.0" prefWidth="55.0" text="Profile" textFill="WHITE">
                     <font>
-                        <Font size="18.0" />
+                        <Font name="Arial" size="18.0" />
                     </font>
                 </Label>
-                <Label fx:id="welcomeString" layoutX="224.0" layoutY="261.0" maxWidth="1.7976931348623157E308" prefHeight="63.0" prefWidth="397.0" style="-fx-font-size: 2.5em;" text="WELCOME" textAlignment="JUSTIFY" textFill="WHITE" wrapText="true" />
-                <Label fx:id="logoutLabel" layoutX="566.0" layoutY="54.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#logout" text="Logout" textFill="WHITE">
+                <Label fx:id="welcomeString" layoutX="188.0" layoutY="265.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="63.0" prefWidth="500.0" style="-fx-font-size: 2.5em;" text="WELCOME" textAlignment="JUSTIFY" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="Arial" size="13.0" />
+               </font></Label>
+                <Label fx:id="logoutLabel" layoutX="566.0" layoutY="54.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#logout" prefHeight="21.0" prefWidth="60.0" text="Logout" textFill="WHITE">
                     <font>
                         <Font name="Arial" size="18.0" />
                     </font>
