--- a/OFC_Cliente/src/model/views/SignInWindow.fxml
+++ b/OFC_Cliente/src/model/views/SignInWindow.fxml
@@ -32,7 +32,7 @@
                      </input>
                   </Reflection>
                </effect></Button>
-            <Label layoutX="36.0" layoutY="155.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="69.5" text="Username">
+            <Label layoutX="36.0" layoutY="155.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="90.0" text="Username">
                <font>
                   <Font size="16.0" />
                </font></Label>
@@ -40,7 +40,7 @@
                <font>
                   <Font name="Arial" size="13.0" />
                </font></TextField>
-            <Label layoutX="46.0" layoutY="264.0" prefHeight="20.0" prefWidth="70.5" text="Password">
+            <Label layoutX="36.0" layoutY="264.0" prefHeight="20.0" prefWidth="90.0" text="Password">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
@@ -54,8 +54,11 @@
                   <Image url="@../sources/questionIconBlack.png" />
                </image></ImageView>
                <PasswordField id="passwdTxPF" fx:id="passwdTxPF" layoutX="36.0" layoutY="292.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="164.5" promptText="min 6 max 12 characters" style="-fx-background-color: none; -fx-border-color: #000; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: #000;" />
-             <Hyperlink fx:id="signUpLink" layoutX="35.0" layoutY="350.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#signUpWindow" prefHeight="30.0" prefWidth="66.5" style="-fx-font-size: 1.3em;" text="Sign Up" textFill="#127cee" />
-            <Label layoutX="80.0" layoutY="53.0" prefHeight="48.0" prefWidth="91.5" style="-fx-font-size: 3em;" text="Login" />
+             <Hyperlink fx:id="signUpLink" layoutX="35.0" layoutY="350.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#signUpWindow" prefHeight="30.0" prefWidth="75.0" style="-fx-font-size: 1.3em;" text="Sign Up" textFill="#143995">
+               <font>
+                  <Font name="Arial Black" size="13.0" />
+               </font></Hyperlink>
+            <Label layoutX="80.0" layoutY="53.0" prefHeight="48.0" prefWidth="110.0" style="-fx-font-size: 3em;" text="Login" />
          </children>
       </AnchorPane>
        <AnchorPane layoutX="269.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="543.0" style="-fx-background-color: #0f0f0f;">
