--- a/OFC_Cliente/src/model/views/SignInWindow.fxml
+++ b/OFC_Cliente/src/model/views/SignInWindow.fxml
@@ -14,11 +14,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="OFC_SIGN_IN" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.SignInWindowController">
+<Pane fx:id="OFC_SIGN_IN" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.SignInWindowController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="275.0" style="-fx-background-color: #FFE98F;">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="275.0" style="-fx-background-color: #FFE98F;">
          <children>
-            <Button id="singInBtn" fx:id="singInBtn" defaultButton="true" layoutX="74.0" layoutY="435.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="49.0" prefWidth="122.0" style="-fx-background-color: #000; -fx-font-size: 1.7em; -fx-text-fill: #FFE98F #FFE98F; -fx-background-radius: 50em;" text="SIGN IN">
+            <Button id="singInBtn" fx:id="singInBtn" defaultButton="true" layoutX="64.0" layoutY="442.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="54.0" prefWidth="123.0" style="-fx-background-color: #000; -fx-text-fill: #FFE98F #FFE98F; -fx-background-radius: 50em;" text="SIGN IN" textAlignment="JUSTIFY" wrapText="true">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
@@ -53,15 +53,18 @@
                <image>
                   <Image url="@../sources/questionIconBlack.png" />
                </image></ImageView>
-               <PasswordField id="passwdTxPF" fx:id="passwdTxPF" layoutX="36.0" layoutY="292.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="164.5" promptText="min 6 max 12 characters" style="-fx-background-color: none; -fx-border-color: #000; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: #000;" />
-             <Hyperlink fx:id="signUpLink" layoutX="35.0" layoutY="350.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#signUpWindow" prefHeight="30.0" prefWidth="75.0" style="-fx-font-size: 1.3em;" text="Sign Up" textFill="#143995">
+               <PasswordField id="passwdTxPF" fx:id="passwdTxPF" layoutX="36.0" layoutY="292.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="164.5" promptText="min 6 max 12 characters" style="-fx-background-color: none; -fx-border-color: #000; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: #000;">
+               <font>
+                  <Font name="Arial" size="13.0" />
+               </font></PasswordField>
+             <Hyperlink fx:id="signUpLink" layoutX="35.0" layoutY="350.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#signUpWindow" prefHeight="40.0" prefWidth="80.0" style="-fx-font-size: 1.3em;" text="Sign Up" textFill="#143995">
                <font>
                   <Font name="Arial Black" size="13.0" />
                </font></Hyperlink>
-            <Label layoutX="80.0" layoutY="53.0" prefHeight="48.0" prefWidth="110.0" style="-fx-font-size: 3em;" text="Login" />
+            <Label layoutX="67.0" layoutY="54.0" prefHeight="54.0" prefWidth="135.0" style="-fx-font-size: 3em;" text="Login" />
          </children>
       </AnchorPane>
-       <AnchorPane layoutX="269.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="543.0" style="-fx-background-color: #0f0f0f;">
+       <AnchorPane layoutX="269.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="543.0" style="-fx-background-color: #0f0f0f;">
          <children>
             <ImageView fx:id="imageView" fitHeight="136.0" fitWidth="340.0" layoutX="102.0" layoutY="232.0" pickOnBounds="true" preserveRatio="true">
                <image>
